2004-08-09
    * terminal: clean up output formattin
    * namingmuse: new option -A, place album in artist/album

2004-08-04
    * cddb: added seconds information
    * albumtag: rough implementation of preserving atime/mtime
    * searchfreedb: filter matches by song count
    * all: consistent use of cddbid and genreid as dict keys

2004-08-02 (version 0.6)
    * cddb: new module for doing freedb lookups

2004-07-14 (version 0.5)
    * initial release: freedb renaming of albums working ok
    * discmatch: added module for generating and searching freedb using discmatch
    * searchfreedb: fulltext search of freedb parsing the web interface